* [BGBUILD-190] Allow to specify kernel variant (PAE or not) for Fedora OS
* [BGBUILD-196] GuestFS fails mounting partitions where more then 3 partitions are present
* [BGBUILD-200] /sbin/e2label: Filesystem has unsupported feature(s) while trying to open /dev/sda1
* [BGBUILD-194] Add support for ElasticHosts cloud

v0.9.0

* [BGBUILD-174] Move plugins to boxgrinder-build gem
* [BGBUILD-169] S3 plugin temporary work-around for EL5
* [BGBUILD-103] README to indicate supported operating systems / requirements
* [BGBUILD-175] Rewrite boxgrinder CLI to remove thor dependency
* [BGBUILD-81] post command execution w/ setarch breaks commands which are scripts
* [BGBUILD-173] Include setarch package in default package list for RPM-based OSes
* [BGBUILD-177] Fedora 13 builds have enabled firewall although they shouldn't have it
* [BGBUILD-178] Remove sensitive data from logs
* [BGBUILD-179] Boolean and numeric parameters in hash-like values are not recognized
* [BGBUILD-176] Fail the build with appropriate message if any of post section commands fails to execute
* [BGBUILD-183] Add support for Fedora 15

v0.8.1

* [BGBUILD-141] Long delay after "Preparing guestfs" message when creating new image
* [BGBUILD-150] Cyclical inclusion dependencies in appliance definition files are not detected/handled
* [BGBUILD-165] Use version in dependencies in gem and in RPM only where necessary

v0.8.0

* [BGBUILD-138] enablerepo path is not escaped when calling repoquery
* [BGBUILD-133] Support a consolidated configuration file
* [BGBUILD-128] Allow to specify plugin configuration using CLI
* [BGBUILD-134] Replace rubygem-commander with rubygem-thor
* [BGBUILD-131] Check if OS is supported before executing the plugin
* [BGBUILD-68] Global .boxgrinder/config or rc style file for config
* [BGBUILD-79] Allow to use BoxGrinder Build as a library
* [BGBUILD-127] Use appliance definition object instead of a file when using BG as a library