@@ -7,6 +7,7 @@ v0.9.1
 * [BGBUILD-196] GuestFS fails mounting partitions where more then 3 partitions are present
 * [BGBUILD-200] /sbin/e2label: Filesystem has unsupported feature(s) while trying to open /dev/sda1
 * [BGBUILD-194] Add support for ElasticHosts cloud
+* [BGBUILD-202] Unable to get valid context for ec2-user after login on AMI
 
 v0.9.0
 
